[gd_scene load_steps=7 format=3 uid="uid://ld7xrswr1y0f"]

[ext_resource type="AudioStream" uid="uid://uv8k7f5uo4kn" path="res://Audio/SFX/Menu/BreadGame Menu hover v.1.wav" id="1_8ag4j"]
[ext_resource type="Script" path="res://win_scene.gd" id="1_q6827"]
[ext_resource type="AudioStream" uid="uid://darp0oxy302a5" path="res://Audio/SFX/Menu/BreadGame Menu click A v.1.wav" id="2_w87om"]
[ext_resource type="AudioStream" uid="uid://d2hftjarbs3h5" path="res://Audio/Music/BreadGame EndingJingle MASTER v.1.mp3" id="3_fy0pq"]
[ext_resource type="Texture2D" uid="uid://cqof0mphdgmyk" path="res://Art/bread0003.png" id="5_ltgil"]

[sub_resource type="Curve" id="Curve_nt67t"]
_data = [Vector2(0.331461, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.197802), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Win Scene" type="Node2D"]
script = ExtResource("1_q6827")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149306
anchor_top = 0.174383
anchor_right = 0.815972
anchor_bottom = 0.41358
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 100
text = "A winner is you!"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.266493
anchor_top = 0.472222
anchor_right = 0.682292
anchor_bottom = 0.731482
offset_bottom = -3.05176e-05
theme_override_font_sizes/font_size = 100
text = "Let's roll!"
metadata/_edit_use_anchors_ = true

[node name="ButtonHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_8ag4j")

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_w87om")

[node name="Win Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fy0pq")
autoplay = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(1789, -31)
amount = 100
lifetime = 2.0
texture = ExtResource("5_ltgil")
emission_shape = 3
emission_rect_extents = Vector2(1920, 1)
angular_velocity_min = -100.0
angular_velocity_max = 100.0
scale_amount_min = 0.07
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_nt67t")

[connection signal="mouse_entered" from="CanvasLayer/Panel/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Panel/Button" to="." method="_on_button_pressed"]
